--- a/COMP4537/labs/1/index.html
+++ b/COMP4537/labs/1/index.html
@@ -14,8 +14,8 @@
     <button id="goToWriter"></button><br>
     <button id="goToReader"></button>
 
-    <script src="lang/messages/en/user.js"></script>
-    <script src="js/script.js"></script>
+    <!-- <script src="lang/messages/en/user.js"></script> -->
+    <script type="module" src="js/script.js"></script>
 </body>
 </html>
 
