--- a/COMP4537/labs/1/reader.html
+++ b/COMP4537/labs/1/reader.html
@@ -21,8 +21,8 @@
     <div id="notesDisplay"></div> <!-- Notes will be displayed here -->
     <a href="index.html">Back to Home</a>
 
-    <script src="lang/messages/en/user.js"></script>
-    <script src="js/script.js"></script>
+    <!-- <script src="lang/messages/en/user.js"></script> -->
+    <script type="module" src="js/script.js"></script>
 </body>
 
 </html>
