--- a/COMP4537/labs/1/writer.html
+++ b/COMP4537/labs/1/writer.html
@@ -23,8 +23,8 @@
     <button id="addNote">Add Note</button>
     <a href="index.html">Back to Home</a>
 
-    <script src="lang/messages/en/user.js"></script>
-    <script src="js/script.js"></script>
+    <!-- <script src="lang/messages/en/user.js"></script> -->
+    <script type="module" src="js/script.js"></script>
 </body>
 
 </html>
