--- a/COMP4537/labs/test/index.html
+++ b/COMP4537/labs/test/index.html
@@ -2,19 +2,23 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Memory Game</title>
     <link rel="stylesheet" href="css/style.css">
-    <title>Lab 1</title>
 </head>
+
 <body>
-    <h1 id="labTitle"></h1>
-    <p id="studentName"></p>
-    <button id="goToWriter"></button><br>
-    <button id="goToReader"></button>
+
+    <label id="labelText" for="numButtons"></label>
+    <input type="number" id="buttonCount" min="3" max="7">
+    <button id="createButtonsBtn">Go!</button>
+    <div id="buttonContainer"></div>
+    <div id="message"></div>
 
     <script type="module" src="js/script.js"></script>
 </body>
-</html>
 
+</html>
